tests/negative/test_lit_num_no_sep.orb
fnc main() () {
    sym (x 0);
    + 999x;
}